# bbdc_book

./: .env.example  .gitignore  README.md  bbdc_word_checker.py  cleanup-release.ps1  cleanup-release.sh  demo.py  env_loader.py  extract_words.py  mineru_api.py  release.ps1  release.sh  requirements.txt  演示.bat  运行.bat  运行Mineru.bat  运行快速版.bat
.github/workflows/: build.yml  ci.yml  release.yml
python/: .env.example  BUILD.md  README.md  build.bat  debug_env.py  env_loader.py  fast_gui.py  mineru_api.py  requirements.txt  run.bat  run_gui.bat  test_bbdc_checker.py
rust/: Cargo.toml  README.md  build.bat  run.bat
rust/src/: bbdc_checker.rs  cli.rs  env_loader.rs  lib.rs  llm_corrector.rs  main.rs  pdf_processor.rs  word_extractor.rs
